test/library/standard/Sort/errors/errors-comparator.compareargs.good
errors-comparator.chpl:9: In function 'main':
errors-comparator.chpl:17: error: The comparator compareargs implements 'relativeComparator' but does not correctly provide a 'compare' method for int(64)
